Bug 97929 - [BAT][SKL] igt/kms_*: [drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change
Summary: [BAT][SKL] igt/kms_*: [drm:skl_set_cdclk] *ERROR* failed to inform PCU about ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-26 09:35 UTC by Ville Syrjala
Modified: 2016-12-12 09:01 UTC (History)
1 user (show)

See Also:
i915 platform: SKL
i915 features: display/Other, power/Other


Attachments

Description Ville Syrjala 2016-09-26 09:35:25 UTC

    
Comment 1 Ville Syrjala 2016-09-26 09:38:02 UTC
kms_pipe_crc_basic occasionally hits "[drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change" on fi-skl-6700hq

My last attempt at fixing these wasn't entirely succesful perhaps:
commit 848496e5902833600f7992f4faa82dc1546051ba
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Wed Jul 13 16:32:03 2016 +0300

    drm/i915: Wait up to 3ms for the pcu to ack the cdclk change request on SKL
Comment 2 Ville Syrjala 2016-10-06 12:11:02 UTC
Also seen with kms_flip/basic-flip-vs-dpms on fi-skl-6770hq
Comment 3 Jari Tahvanainen 2016-10-11 12:33:08 UTC
Propability of this failure on fi-skl-6770hq is less than 10% (based on last 100 igt -t basic runs for CI_DRM:
CI_DRM_1646/fi-skl-6770hq/html/fi-skl-6770hq@CI_DRM_1646/igt@kms_pipe_crc_basic@read-crc-pipe-c
[  588.952203] [drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change
CI_DRM_1654/fi-skl-6770hq/html/fi-skl-6770hq@CI_DRM_1654/igt@kms_pipe_crc_basic@nonblocking-crc-pipe-a
[  519.129401] [drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change
CI_DRM_1655/fi-skl-6770hq/html/fi-skl-6770hq@CI_DRM_1655/igt@kms_pipe_crc_basic@read-crc-pipe-b
[  540.991991] [drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change
CI_DRM_1666/fi-skl-6770hq/html/fi-skl-6770hq@CI_DRM_1666/igt@pm_rpm@basic-pci-d3-state
[  609.849498] [drm:skl_set_cdclk] *ERROR* failed to inform PCU about cdclk change
CI_DRM_1693/fi-skl-6770hq/dmesg-during-piglit-run-1.log:
[  506.406787] [drm:skl_set_cdclk [i915]] *ERROR* failed to inform PCU about cdclk change

Note that with this sample every time it is different test case getting dmesg, and on CI_DRM_1693 none of the igt cases gets the dmesg-fail even though it does happen.
Comment 4 Jari Tahvanainen 2016-10-12 10:07:32 UTC
Priority decreased due to sporadic nature of the bug.
Comment 5 Imre Deak 2016-11-24 14:10:59 UTC
Haven't found any problem with the programming sequence and I couldn't reproduce the problem. A subsequent CDCLK change does succeed after the failed attempt, so how about increasing the timeout for now and investigate more if things still fail with that?
Comment 6 yann 2016-11-25 08:14:05 UTC
Reference to Imre's patchset to wait up to 3ms for the pcu to ack the cdclk change request on SKL: https://patchwork.freedesktop.org/series/15911/
Comment 7 Imre Deak 2016-12-07 16:03:58 UTC
Updated patchset:
https://patchwork.freedesktop.org/series/16375/
Comment 8 Imre Deak 2016-12-08 21:02:41 UTC
Fix merged to drm-tip.
Comment 9 Jani Saarinen 2016-12-09 18:28:09 UTC
Thanks Imre.
Comment 10 yann 2016-12-12 09:01:20 UTC
Closing as it is merged and passing for some time on all paltform in CI system


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.